includes test for HalfCheetah and Swimmer

--- a/codes/Test.ipynb
+++ b/codes/Test.ipynb
@@ -22,52 +22,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.00000000e+00,  1.00000000e+00,  3.33333333e-01,\n",
-       "         4.16666667e-01,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  1.55714476e-01,  0.00000000e+00,\n",
-       "        -1.38357040e-02,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  3.01759508e-01, -3.33333333e-01,\n",
-       "        -6.27352461e-03,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  4.45431843e-01, -3.33333333e-01,\n",
-       "        -4.40762491e-04,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  5.75116132e-01,  0.00000000e+00,\n",
-       "        -2.92735381e-02,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  7.13473168e-01,  0.00000000e+00,\n",
-       "        -2.10318469e-02,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  8.61188840e-01,  3.33333333e-01,\n",
-       "        -2.05359604e-02,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  1.00000000e+00, -3.33333333e-01,\n",
-       "        -1.64280798e-02,  0.00000000e+00],\n",
-       "       [ 1.00000000e+00,  1.00000000e+00,  3.33333333e-01,\n",
-       "        -2.19061823e-02,  0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00,  0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00,  0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00,  0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00,  0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00,  0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00,  0.00000000e+00]])"
+       "array([ 0.06650209,  0.05669518, -0.0762092 ,  0.00493624,  0.06838387,\n",
+       "       -0.03948404,  0.02953121,  0.01415538])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env = gym.make('highway-v0')\n",
+    "env = gym.make('Swimmer-v2')\n",
     "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict(achieved_goal:Box(-inf, inf, (7,), float32), desired_goal:Box(-inf, inf, (7,), float32), observation:Box(-inf, inf, (61,), float32))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space"
    ]
   },
   {
@@ -345,9 +337,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch1.4",
+   "display_name": "BPG",
    "language": "python",
-   "name": "pytorch1.4"
+   "name": "bpg"
   },
   "language_info": {
    "codemirror_mode": {
@@ -359,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
