update params and codes

--- a/codes/Plots.ipynb
+++ b/codes/Plots.ipynb
@@ -234,23 +234,29 @@
     "plt.figure()\n",
     "ax = plt.subplot(111)\n",
     "\n",
-    "runs = dfw[\"run\"].unique()\n",
+    "runs = data[\"run\"].unique()\n",
     "runs_ordered = []\n",
+    "alg_name = []\n",
     "for i in range(5):\n",
     "    for name in runs:\n",
     "        if i == 0 and 'VPG' in name:\n",
     "            runs_ordered.append(name)\n",
+    "            alg_name.append('GPOMDP(k=1)')\n",
     "        elif i == 1 and 'SVRG' in name:\n",
     "            runs_ordered.append(name)\n",
+    "            alg_name.append('SVRPG(k=1)')\n",
     "        elif i == 2 and 'Ours' in name and 'W1_' in name:\n",
     "            runs_ordered.append(name)\n",
+    "            alg_name.append('FedPG-BF(k=1)')\n",
     "        elif i == 3 and 'Ours' in name and 'W5' in name:\n",
     "            runs_ordered.append(name)\n",
+    "            alg_name.append('FedPG-BF(k=5)')\n",
     "        elif i == 4 and 'Ours' in name and 'W10' in name:\n",
     "            runs_ordered.append(name)\n",
+    "            alg_name.append('FedPG-BF(k=10)')\n",
     "\n",
-    "for run_name in runs_ordered:\n",
-    "    cur_dfw = dfw[dfw.run.str.endswith(f'{run_name}')]\n",
+    "for id,run_name in enumerate(runs_ordered):\n",
+    "    cur_dfw = data[data.run.str.endswith(f'{run_name}')]\n",
     "    lines = []\n",
     "    for run_id in range(max_runs):\n",
     "        steps = cur_dfw[cur_dfw.tag.str.endswith(f'{run_id}')]['step'].to_numpy()\n",
@@ -258,11 +264,12 @@
     "        lines.append(Rbf(steps, values, function = 'linear')(np.arange(max_trajectories)))\n",
     "    mean = np.mean(lines, axis=0)\n",
     "    l, h = stats.norm.interval(interval, loc=np.mean(lines, axis = 0), scale=stats.sem(lines, axis = 0))\n",
-    "    ax.plot(mean, label=(f\"{'_'.join(map(str, run_name.split('_')[4:6]))}\"))\n",
+    "    ax.plot(mean, label=(f'{alg_name[id]}'))\n",
     "    ax.fill_between(range(int(max_trajectories)), l, h, alpha = 0.5)\n",
-    "    \n",
     "\n",
-    "ax.legend()\n",
+    "\n",
+    "ax.legend() \n",
+    "plt.ylim(0,4000)\n",
     "plt.show()"
    ]
   },
